@@ -281,6 +281,7 @@
         if(qitem) map->query.item = strdup(qitem);
         if(qstring) map->query.str = strdup(qstring);
         map->query.layer = self->index;
+        map->query.rect = map->extent;
 
         status = self->status;
         self->status = MS_ON;
